--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,6 @@
 .container {
   padding: 0 2rem;
+  /* margin: 0 auto; */
   /* margin-top: -17em; */
 }
 
@@ -10,6 +11,7 @@
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
+  margin-top: 0rem !important;
 }
 
 .footer a {
@@ -17,6 +19,10 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
+}
+
+.title {
+  top: 20rem;
 }
 
 .title a {
@@ -104,9 +110,25 @@ button.saveNote {
   margin-top: 5rem;
 }
 
+.deleteIcon {
+  font-weight: 900;
+  cursor: pointer;
+}
+
+.deleteDoc {
+  padding: 0;
+  width: 10px;
+  display: inline-block;
+}
+
 .docThumbnail {
   border: 1px solid pink;
 }
+
+/* .msg {
+  display: block;
+  margin-top: 3rem;
+} */
 
 @media (max-width: 600px) {
   .grid {
